Fix share icons wrapping in video title

--- a/scss/components/_videoDetails.scss
+++ b/scss/components/_videoDetails.scss
@@ -34,7 +34,7 @@
     }
 
     &-share {
-        padding: 0 $base-spacing;
+        padding-right: $base-spacing;
         float: right;
 
         .jw-button {
